# UNAB-OPTICALCRYPTOSIMULATOR

./: ProjectHome.md  README.txt
LIBS/: Matched_Filter_Digital_Modulation.asv  libChannellProperties.m  libCodConv.m  libCodOrt2bits.m  libPCM.m  libPCM2.m
OFDM_SIMULATION/: Extraer_Canal.m  OFDM_GUIDE.fig  OFDM_GUIDE.m
OFDM_SIMULATION/LIBS/: ofdm_frame_detect.m  ofdm_modulate.m
OPTICAL_CRIPTOGRAPHY/: Generador_Fase.m  LLAVE_PARA_UNAB_ENCRIPTADA.mat  UNAB_ENCRIPTADA.mat
OPTICAL_CRYPTOGRAPHY_C++/: CMakeLists.txt  mainwindow.ui  qtipl.cpp
SIM/: Matched_Filter.m  Matched_Filter_Digital_Modulation.m  PRUEBA.m  Script_Tarea_6.m
trunk/LIBS/: libCodOrt1bit.m  libDigitalModulation.asv  libDigitalModulation.m  libFourier.asv  libFourier.m  libLinearBlockCodes.m  libNoise_and_Attenuation.m  libPhysicalCanal.asv  libPhysicalCanal.m
trunk/OFDM_SIMULATION/: OFDM_FUNCTION.m  OFDM_FUNCTION2.m  OFDM_SIM.m  rand_generator.m
trunk/OFDM_SIMULATION/LIBS/: Acoplar_Mag_Fas_One_Image.m  Desencriptador_Optico.m  Encriptador_Optico.m  Mascara_Aleatoria.m  ofdm_base_convert.m  ofdm_demod.m  ofdm_parameters.m  ofdm_parameters_func.m
trunk/OPTICAL_CRIPTOGRAPHY/: Generador_Fase.fig
trunk/OPTICAL_CRYPTOGRAPHY_C++/: CRIPTOGRAFIA_OPTICA.pro  criptografia_optica.rc  mainwindow.cpp  mainwindow.h  mainwindow.qrc  qtipl.h
trunk/SIM/: Fourier_Analysis.m  OFDM_SIMPLE_SIMULATION.m  TCP.m  readS.m  sendS.m
