cmake_minimum_required(VERSION 2.8)

project(CRIPTOGRAFIA_OPTICA)

find_package(Qt4 COMPONENTS QtCore QtGui Phonon QtNetwork QtMultimedia QtXml REQUIRED)
find_package(OpenCV REQUIRED)
include(${QT_USE_FILE})

SET(CMAKE_LIBRARY_PATH_FLAG "-LIBPATH:")
set(CRIPTOGRAFIA_OPTICA_HEADERS mainwindow.h qtipl.h)
set(CRIPTOGRAFIA_OPTICA_SOURCES mainwindow.cpp qtipl.cpp main.cpp criptografia_optica.rc)
set(CRIPTOGRAFIA_OPTICA_UIS mainwindow.ui)
set(CRIPTOGRAFIA_OPTICA_RESOURCES mainwindow.qrc)

qt4_wrap_cpp(CRIPTOGRAFIA_OPTICA_MOC ${CRIPTOGRAFIA_OPTICA_HEADERS})
qt4_wrap_ui(CRIPTOGRAFIA_OPTICA_UIS_H ${CRIPTOGRAFIA_OPTICA_UIS})
qt4_add_resources(CRIPTOGRAFIA_OPTICA_RESOURCES_CPP ${CRIPTOGRAFIA_OPTICA_RESOURCES})

include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_executable(CRIPTOGRAFIA_OPTICA
    ${CRIPTOGRAFIA_OPTICA_SOURCES}
    ${CRIPTOGRAFIA_OPTICA_MOC}
    ${CRIPTOGRAFIA_OPTICA_UIS_H}
    ${CRIPTOGRAFIA_OPTICA_RESOURCES_CPP}
)

target_link_libraries(CRIPTOGRAFIA_OPTICA ${QT_LIBRARIES} ${OpenCV_LIBS})